@@ -52,6 +52,7 @@ public class GeneralConfigManager {
     public boolean payExploringWhenGliding;
     public boolean disablePaymentIfRiding;
     protected boolean addXpPlayer;
+    public boolean boostedItemsInOffHand;
     public boolean payItemDurabilityLoss;
     public List<String> WhiteListedItems = new ArrayList<>();
     protected boolean hideJobsWithoutPermission;
@@ -569,6 +570,11 @@ public class GeneralConfigManager {
 
 	c.addComment("add-xp-player", "Adds the Jobs xp received to the player's Minecraft XP bar");
 	addXpPlayer = c.get("add-xp-player", false);
+
+	if (Version.isCurrentEqualOrHigher(Version.v1_9_R1)) {
+	    c.addComment("enable-boosted-items-in-offhand", "Do the jobs boost ignore the boosted items usage in off hand?");
+	    boostedItemsInOffHand = c.get("enable-boosted-items-in-offhand", true);
+	}
 
 	c.addComment("allow-pay-for-durability-loss", "Allows, when losing maximum durability of item then it does not pay the player until it is repaired.",
 	    "E.g. the player wants to enchant a item with enchanting table and the item has durability loss then not paying.");
