@@ -10,3 +10,5 @@
 - Fixed issue when the player gliding is not valid in 1.9.1 version
 - Fixed signs updating
 - Level, exp adding and taking amounts now correctly calculating.
+- New placeholder %jobsr_user_job_(jname/number)% to show the player job.
+- Added option to ignore the boosted items usage in off hand.
